--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-reactjs-ts-starter",
+  "name": "multi-select-dropdown-reactjs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
